tweak tmux statusline

--- a/tmux.conf
+++ b/tmux.conf
@@ -63,6 +63,7 @@ set -g message-command-style "bg=#{@bordercolor},fg=#{@altcolor}"
 set -g status-interval 1
 set -g status on
 set -g status-style "bg=terminal,fg=#{@bordercolor},nostrikethrough,italics"
+set -g status-right ""
 set -g status-left-length 40
 set -g status-left "#[align=left,nostrikethrough,fg=#{@bordercolor}]#[fg=#{@activecolor}]#{?client_prefix,-- PREFIX MODE --,tmux:#S}#[fg=#{@bordercolor}] "
 # Windows
