--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,8 @@ setw -g aggressive-resize on
 set -s escape-time 0
 # have window indices start from 1
 set -g base-index 1
+# I need some way of knowing when I am currently attached to a tmux session
+set-environment -g IN_TMUX 1
 
 # Create a new window using the current pane's directory as the new window's directory
 bind c new-window -c "#{pane_current_path}"
