--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -16,6 +16,7 @@
     ~/.bashrc: bash/bashrc
     ~/.config/bash/complete_alias: bash/complete-alias/complete_alias
     ~/.config/bash/fzf-bash-completion.sh: bash/fzf-tab-completion/bash/fzf-bash-completion.sh
+    ~/.profile: bash/profile
     ~/.config/kitty: kitty
     ~/.config/kitty/current-theme.conf:
         path: ~/.config/kitty/night-theme.conf
