--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,7 @@ set -s escape-time 0
 set -g base-index 1
 # I need some way of knowing when I am currently attached to a tmux session
 set-environment -g IN_TMUX 1
+set -g prefix C-Space
 
 # Create a new window using the current pane's directory as the new window's directory
 bind c new-window -c "#{pane_current_path}"
