keep default prefix

--- a/tmux.conf
+++ b/tmux.conf
@@ -13,6 +13,8 @@ set -g base-index 1
 # I need some way of knowing when I am currently attached to a tmux session
 set-environment -g IN_TMUX 1
 set -g prefix C-Space
+# keep the default prefix as well
+set -g prefix2 C-b
 
 # Create a new window using the current pane's directory as the new window's directory
 bind c new-window -c "#{pane_current_path}"
