[c]reate new window

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,7 @@ set -g prefix2 C-b
 
 # Create a new window using the current pane's directory as the new window's directory
 bind c new-window -c "#{pane_current_path}"
+bind -n M-c new-window -c "#{pane_current_path}"
 # split panes horizontally/vertically using the current pane's directory as the new pane's directory
 bind '|' split-window -h -c '#{pane_current_path}'
 bind '_' split-window -v -c '#{pane_current_path}'
