--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -7,6 +7,7 @@
 - link:
     ~/.tmux.conf: tmux.conf
     ~/.vimrc: vim/vimrc
+    ~/.config/nvim/init.vim: init.vim
     ~/.gitconfig: gitconfig
     ~/.xbindkeysrc: xbindkeysrc
     ~/.bashrc: bash/bashrc
