move bash prompt to separate file

--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -13,6 +13,7 @@
     ~/.bashrc: bash/bashrc
     ~/.config/bash/complete_alias: bash/complete-alias/complete_alias
     ~/.config/bash/fzf-bash-completion.sh: bash/fzf-tab-completion/bash/fzf-bash-completion.sh
+    ~/.config/bash/prompt.bash: bash/prompt.bash
     ~/.profile: bash/profile
     ~/.config/kitty: kitty
     ~/.config/kitty/current-theme.conf:
