--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -38,3 +38,4 @@
 - shell:
     - [./smart-plug/install , Install and start smart plug service]
     - [sudo cp ./languagetool.service /etc/systemd/system/ && sudo systemctl enable languagetool.service && sudo systemctl start languagetool.service, Install and start languagetool service]
+    - [ sudo install --compare --backup --suffix=.bak --owner=root --group=root --mode='u=rw,g=r,o=r' -D --verbose --no-target-directory bash/bashrc_root.bash /root/.bashrc && sudo install --compare --backup --suffix=.bak --owner=root --group=root --mode='u=rw,g=r,o=r' -D --verbose --no-target-directory bash/prompt.bash  /root/.config/bash/prompt.bash, Install .bashrc for the root user]
