i think this is right

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # allow mouse use
 set-option -g mouse on
 # let colors pass through
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
 # disallow tmux from renaming windows, this way my custom name isn't overwritten
 set-option -g allow-rename off
 set-option -g renumber-windows on
