put header text in prompt

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,7 +29,7 @@ bind-key -n M-H previous-window
 bind-key -n M-L next-window
 # toggle zoom on pane
 bind-key -n M-m resize-pane -Z
-bind -n M-/ split-window -fv -l 25% "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --header='Sessions' --preview='tmux list-windows -t {}' --prompt='>> ' --info=hidden | xargs tmux switch-client -t"
+bind -n M-/ split-window -fv -l 25% "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --preview='tmux list-windows -t {}' --prompt='sessions> ' --info=hidden | xargs tmux switch-client -t"
 
 # popup
 bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
