--- a/tmux.conf
+++ b/tmux.conf
@@ -13,13 +13,13 @@ set -g base-index 1
 # I need some way of knowing when I am currently attached to a tmux session
 set-environment -g IN_TMUX 1
 set -g prefix C-Space
+set -g focus-events on
 
 # Create a new window using the current pane's directory as the new window's directory
 bind c new-window -c "#{pane_current_path}"
-bind -n M-c new-window -c "#{pane_current_path}"
 # split panes horizontally/vertically using the current pane's directory as the new pane's directory
 bind '|' split-window -h -c '#{pane_current_path}'
-bind '_' split-window -v -c '#{pane_current_path}'
+bind '-' split-window -v -c '#{pane_current_path}'
 # reload
 bind r run-shell 'tmux source ~/.tmux.conf && tmux display-message "Reloaded TMUX..."'
 # use alt/meta + arrow to navigate windows
@@ -56,7 +56,7 @@ set -g @activecolor 'blue'
 set -g @inactivecolor 'brightblack'
 set -g @bordercolor 'black'
 # Panes
-set -g pane-border-lines single
+set -g pane-border-lines double
 set -g pane-active-border-style "fg=#{@activecolor}"
 set -g pane-border-style "fg=#{@bordercolor}"
 # Clock Mode
@@ -70,7 +70,7 @@ set -g status on
 set -g status-style "bg=terminal,fg=#{@bordercolor},nostrikethrough,italics"
 set -g status-right ""
 set -g status-left-length 40
-set -g status-left "#[align=left,nostrikethrough,fg=#{@bordercolor}]#[fg=#{@activecolor}]#{?client_prefix,-- PREFIX MODE --,tmux:#S}#[fg=#{@bordercolor}] "
+set -g status-left "#[align=left,nostrikethrough,fg=#{@bordercolor}]#[fg=#{@activecolor}]#{?client_prefix,#[bold]-- PREFIX MODE --,tmux:#S}#[fg=#{@bordercolor}] "
 # Windows
 set -g status-justify right
 set -g window-status-format "#[nostrikethrough,fg=#{@bordercolor}]#[fg=#{@inactivecolor}]#I:#W#[fg=#{@bordercolor}] "
@@ -91,6 +91,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 # NOTE: continuum must be the last plugin listed: https://github.com/tmux-plugins/tmux-continuum#known-issues
 set -g @plugin 'tmux-plugins/tmux-continuum'
     set -g @continuum-restore 'on' # Automatically restore session when tmux is started
-    set -g @continuum-save-interval '10' # measured in minutes
+    set -g @continuum-save-interval '1' # measured in minutes
 # Start the plugin manager
 run '~/.tmux/plugins/tpm/tpm'
