--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Ubuntu Mono
+font_family      Source Code Pro
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -23,7 +23,7 @@ font_family      Ubuntu Mono
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 18.0
+font_size 13.0
 
 #: Font size (in pts)
 
@@ -46,7 +46,7 @@ font_size 18.0
 #: support, because it will force kitty to always treat the text as
 #: LTR, which FriBidi expects for terminals.
 
-adjust_line_height  110%
+# adjust_line_height  100%
 # adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
@@ -564,7 +564,7 @@ enable_audio_bell no
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 5
+window_padding_width 2
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -759,7 +759,7 @@ hide_window_decorations no
 
 #: The foreground and background colors
 
-background_opacity .97
+background_opacity .99
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
