(tmux) change border style to heavy

--- a/tmux.conf
+++ b/tmux.conf
@@ -56,7 +56,7 @@ set -g @activecolor 'blue'
 set -g @inactivecolor 'brightblack'
 set -g @bordercolor 'black'
 # Panes
-set -g pane-border-lines double
+set -g pane-border-lines heavy
 set -g pane-active-border-style "fg=#{@activecolor}"
 set -g pane-border-style "fg=#{@bordercolor}"
 # Clock Mode
