--- a/tmux.conf
+++ b/tmux.conf
@@ -55,6 +55,7 @@ set -g pane-border-format ''
 set -g @activecolor 'blue'
 set -g @inactivecolor 'brightblack'
 set -g @bordercolor 'black'
+set -g @standoutcolor 'yellow'
 # Panes
 set -g pane-border-lines heavy
 set -g pane-active-border-style "fg=#{@activecolor}"
@@ -74,7 +75,7 @@ set -g status-left "#[align=left,nostrikethrough,fg=#{@bordercolor}]#[fg=#{@acti
 # Windows
 set -g status-justify right
 set -g window-status-format "#[nostrikethrough,fg=#{@bordercolor}]#[fg=#{@inactivecolor}]#I:#W#[fg=#{@bordercolor}] "
-set -g window-status-current-format "#[nostrikethrough,fg=#{@bordercolor}]#[fg=#{@activecolor}]#I:#W#F#[fg=#{@bordercolor}]"
+set -g window-status-current-format "#[nostrikethrough,fg=#{@bordercolor}]#[#{?window_zoomed_flag,fg=#{@standoutcolor},fg=#{@activecolor}}]#I:#W#F#[fg=#{@bordercolor}]"
 set -g window-status-separator "#[fg=black,nostrikethrough] / "
 
 # Plugins
