(tmux) change active color

--- a/tmux.conf
+++ b/tmux.conf
@@ -52,7 +52,7 @@ bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 set -g status-position 'bottom'
 set -g pane-border-status bottom
 set -g pane-border-format ''
-set -g @activecolor 'blue'
+set -g @activecolor 'cyan'
 set -g @inactivecolor 'brightblack'
 set -g @bordercolor 'black'
 set -g @standoutcolor 'yellow'
