--- a/tmux.conf
+++ b/tmux.conf
@@ -71,7 +71,7 @@ set -g status on
 set -g status-style "bg=terminal,fg=#{@bordercolor},nostrikethrough,italics"
 set -g status-right ""
 set -g status-left-length 40
-set -g status-left "#[align=left,nostrikethrough,fg=#{@bordercolor}]#[fg=#{@activecolor}]#{?client_prefix,#[bold]-- PREFIX MODE --,tmux:#S}#[fg=#{@bordercolor}] "
+set -g status-left "#[align=left,nostrikethrough,fg=#{@bordercolor}]#[fg=#{@activecolor}]#{?client_prefix,#[bold#,fg=#{@standoutcolor}]-- PREFIX MODE --#[fg=#{@activecolor}],tmux:#S}#[fg=#{@bordercolor}] "
 # Windows
 set -g status-justify right
 set -g window-status-format "#[nostrikethrough,fg=#{@bordercolor}]#[fg=#{@inactivecolor}]#I:#W#[fg=#{@bordercolor}] "
