(tmux) add plugin to auto reload tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -88,6 +88,8 @@ set -g @plugin 'nhdaly/tmux-better-mouse-mode'
 # allows saving the state of tmux to a file so it can be restored later
 set -g @plugin 'tmux-plugins/tmux-resurrect'
     set -g @resurrect-processes '"~watch" mosh-client'
+# auto reload ~/.tmux.conf when it changes
+set-option -g @plugin 'b0o/tmux-autoreload'
 # Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
 # NOTE: continuum must be the last plugin listed: https://github.com/tmux-plugins/tmux-continuum#known-issues
 set -g @plugin 'tmux-plugins/tmux-continuum'
