--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -48,6 +48,7 @@
     ~/.config/fish/functions/:
         glob: true
         path: fish/functions/*
+    ~/.config/fish/fish_plugins: fish/fish_plugins
     ~/.config/direnv/direnvrc: direnv/direnvrc
 
 # Using another link directive since I have multiple links to this directory and you can't have
