--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,8 @@ set -g base-index 1
 set-environment -g IN_TMUX 1
 set -g prefix C-Space
 set -g focus-events on
+# Don't launch new shells as login-shells
+set -g default-command "$SHELL"
 
 # Create a new window using the current pane's directory as the new window's directory
 bind c new-window -c "#{pane_current_path}"
