(kitty) change cursor color

--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -15,7 +15,7 @@ background            #272A34
 selection_foreground  #000000
 selection_background  #FFFACD
 url_color             #0087BD
-cursor                #81A1C1
+cursor                #D8DEE9
 
 # black
 color0   #454d60
