(kitty) tweak night colorscheme

--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -18,8 +18,10 @@ url_color             #0087BD
 cursor                #D8DEE9
 
 # black
-color0   #454d60
-color8   #626f89
+# more contrast with background (e.g. comments)
+color0   #626f89
+# less contrast with background (e.g. status bar)
+color8   #333745
 
 # red
 color1   #BF616A
