(less) add less config

--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -51,6 +51,7 @@
     ~/.config/fish/fish_plugins: fish/fish_plugins
     ~/.config/direnv/direnvrc: direnv/direnvrc
     ~/.config/bat/config: bat/config
+    ~/.lesskey: less/lesskey
 
 # Using another link directive since I have multiple links to this directory and you can't have
 # multiple keys with the same name in YAML
