--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -52,6 +52,7 @@
     ~/.config/direnv/direnvrc: direnv/direnvrc
     ~/.config/bat/config: bat/config
     ~/.lesskey: less/lesskey
+    ~/.config/bat/themes/base16-brighter.tmTheme: bat/base16-brighter.tmTheme
 
 # Using another link directive since I have multiple links to this directory and you can't have
 # multiple keys with the same name in YAML
