(tmux) remove unnecessary quotes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,7 +50,7 @@ bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 
 # status bar configuration
 #######################################
-set -g status-position 'bottom'
+set -g status-position bottom
 set -g pane-border-status bottom
 set -g pane-border-format ''
 set -g @activecolor 'cyan'
