--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -11,7 +11,7 @@
 # - https://github.com/arcticicestudio/nord-hyper
 
 foreground            #D8DEE9
-background            #272A34
+background            #232731
 selection_foreground  #000000
 selection_background  #FFFACD
 url_color             #0087BD
