--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -793,7 +793,7 @@ background_opacity .99
 #: When background image is scaled, whether linear interpolation
 #: should be used.
 
-# dynamic_background_opacity no
+dynamic_background_opacity yes
 
 #: Allow changing of the background_opacity dynamically, using either
 #: keyboard shortcuts (increase_background_opacity and
