--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Source Code Pro
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      Source Code Pro Semibold
+bold_font        Source Code Pro Heavy
+italic_font      Source Code Pro Semibold Italic
+bold_italic_font Source Code Program Heavy Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
