(kitty) change colors used for selected text

--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -12,8 +12,8 @@
 
 foreground            #D8DEE9
 background            #232731
-selection_foreground  #000000
-selection_background  #FFFACD
+selection_foreground  none
+selection_background  #333745
 url_color             #0087BD
 cursor                #D8DEE9
 
