(kitty) tweak colors

--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -4,11 +4,12 @@
 background            #fdf6e3
 foreground            #52676f
 cursor                #52676f
-selection_background  #e9e2cb
-selection_foreground #52676f
+# should match color8
+selection_background  #faecc6
+selection_foreground  none
 url_color #d75f00
 color0 #b8b095
-color8 #818181
+color8 #faecc6
 color1 #d70000
 color9 #d75f00
 color2 #5f8700
