--- a/kitty/night-theme.conf
+++ b/kitty/night-theme.conf
@@ -13,6 +13,7 @@
 foreground            #D8DEE9
 background            #232731
 selection_foreground  none
+# should match color8
 selection_background  #333745
 url_color             #0087BD
 cursor                #D8DEE9
@@ -25,7 +26,7 @@ color8   #333745
 
 # red
 color1   #BF616A
-color9   #d08770
+color9   #BF616A
 
 # green
 color2   #A3BE8C
