(fish/kitty) enable shell integration

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1513,4 +1513,6 @@ map kitty_mod+v paste_from_clipboard
 # load colorscheme
 include current-theme.conf
 
-shell_integration disabled
+# TODO: Prompt marking breaks my prompt for some reason so I'm disabling it for now, but
+# I should figure out the issue
+shell_integration disabled no-prompt-mark
