--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,6 +4,7 @@ set-option -g mouse on
 set -g default-terminal "tmux-256color"
 # disallow tmux from renaming windows, this way my custom name isn't overwritten
 set-option -g allow-rename off
+set -g automatic-rename off
 set-option -g renumber-windows on
 bind-key -n MouseDrag1Status swap-window -d -t=
 setw -g aggressive-resize on
