(tmux) change highlight color

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,6 +31,8 @@ bind-key -n M-H previous-window
 bind-key -n M-L next-window
 # toggle zoom on pane
 bind-key -n M-m resize-pane -Z
+# change highlight color
+set -g mode-style "fg=terminal,bg=colour8"
 
 # popup
 bind -n M-t if-shell -F '#{==:#{session_name},popup}' {
