(tmux) remove unnecessary settings and fix spacing issue with window names

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -58,7 +58,6 @@ bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 #######################################
 set -g status-position bottom
 set -g pane-border-status bottom
-set -g pane-border-format ''
 set -g @activecolor 'colour14'
 set -g @inactivecolor 'black'
 set -g @bordercolor 'black'
@@ -75,15 +74,15 @@ set -g message-command-style "bg=#{@bordercolor},fg=#{@altcolor}"
 # Bars
 set -g status-interval 1
 set -g status on
-set -g status-style "bg=terminal,fg=#{@bordercolor},nostrikethrough,italics"
+set -g status-style "bg=terminal,fg=#{@bordercolor}"
 set -g status-right ""
 set -g status-left-length 40
-set -g status-left "#[align=left,nostrikethrough,fg=#{@bordercolor}]#[fg=#{@activecolor}]#{?client_prefix,#[bold#,fg=#{@standoutcolor}]-- PREFIX MODE --#[fg=#{@activecolor}],tmux:#S}#[fg=#{@bordercolor}] "
+set -g status-left "#[align=left,fg=#{@bordercolor}]#[fg=#{@activecolor}]#{?client_prefix,#[bold#,fg=#{@standoutcolor}]-- PREFIX MODE --#[fg=#{@activecolor}],tmux:#S}#[fg=#{@bordercolor}] "
 # Windows
 set -g status-justify right
-set -g window-status-format "#[nostrikethrough,fg=#{@bordercolor}]#[fg=#{@inactivecolor}]#I:#W#[fg=#{@bordercolor}] "
-set -g window-status-current-format "#[nostrikethrough,fg=#{@bordercolor}]#[#{?window_zoomed_flag,fg=#{@standoutcolor},fg=#{@activecolor}}]#I:#W#F#[fg=#{@bordercolor}]"
-set -g window-status-separator "#[fg=black,nostrikethrough] / "
+set -g window-status-format "#[fg=#{@bordercolor}]#[fg=#{@inactivecolor}]#I:#W#[fg=#{@bordercolor}]"
+set -g window-status-current-format "#[fg=#{@bordercolor}]#[#{?window_zoomed_flag,fg=#{@standoutcolor},fg=#{@activecolor}}]#I:#W#F#[fg=#{@bordercolor}]"
+set -g window-status-separator "#[fg=black] / "
 
 # Plugins
 #######################################
