(tmux) no text in pane borders

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,6 +16,7 @@ set-environment -g IN_TMUX 1
 set -g prefix C-Space
 # Don't launch new shells as login-shells
 set -g default-command "$SHELL"
+set -g pane-border-format ''
 
 # Create a new window using the current pane's directory as the new window's directory
 bind c new-window -c "#{pane_current_path}"
