(tmux) dim the text for unfocused windows instead of using a different color

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -81,7 +81,7 @@ set -g status-left-length 40
 set -g status-left "#[align=left,fg=#{@bordercolor}]#[fg=#{@activecolor}]#{?client_prefix,#[bold#,fg=#{@standoutcolor}]-- PREFIX MODE --#[fg=#{@activecolor}],tmux:#S}#[fg=#{@bordercolor}] "
 # Windows
 set -g status-justify right
-set -g window-status-format "#[fg=#{@bordercolor}]#[fg=#{@inactivecolor}]#I:#W#[fg=#{@bordercolor}]"
+set -g window-status-format "#[fg=#{@bordercolor}]#[fg=#{@activecolor},dim]#I:#W#[fg=#{@bordercolor}]"
 set -g window-status-current-format "#[fg=#{@bordercolor}]#[#{?window_zoomed_flag,fg=#{@standoutcolor},fg=#{@activecolor}}]#I:#W#F#[fg=#{@bordercolor}]"
 set -g window-status-separator "#[fg=black] / "
 
