(tmux) allow auto-renaming for windows

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,9 +2,9 @@
 set-option -g mouse on
 # let colors pass through
 set -g default-terminal "tmux-256color"
-# disallow tmux from renaming windows, this way my custom name isn't overwritten
-set-option -g allow-rename off
-set -g automatic-rename off
+set-option -g allow-rename on
+# Let tmux automatically rename windows, unless I manually set a name for that window
+set -g automatic-rename on
 set-option -g renumber-windows on
 bind-key -n MouseDrag1Status swap-window -d -t=
 setw -g aggressive-resize on
