(tmux) remove window index number from statusline

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -74,8 +74,8 @@ set -g status-left-length 40
 set -g status-left "#[align=left,fg=#{@bordercolor}]#[fg=#{@activecolor}]#{?client_prefix,#[bold#,fg=#{@standoutcolor}]-- PREFIX MODE --#[fg=#{@activecolor}],#S}#[fg=#{@bordercolor}] "
 # Windows
 set -g status-justify right
-set -g window-status-format "#[fg=#{@bordercolor}]#[fg=#{@activecolor},dim]#I:#W#[fg=#{@bordercolor}]"
-set -g window-status-current-format "#[fg=#{@bordercolor}]#[#{?window_zoomed_flag,fg=#{@standoutcolor},fg=#{@activecolor}}]#I:#W#F#[fg=#{@bordercolor}]"
+set -g window-status-format "#[fg=#{@bordercolor}]#[fg=#{@activecolor},dim]#W#[fg=#{@bordercolor}]"
+set -g window-status-current-format "#[fg=#{@bordercolor}]#[#{?window_zoomed_flag,fg=#{@standoutcolor},fg=#{@activecolor}}]#W#F#[fg=#{@bordercolor}]"
 set -g window-status-separator "#[fg=black] / "
 
 # TODO: These popup settings have been merged into tmux, just hasn't been added to a release yet.
