--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -73,6 +73,9 @@
 
 - shell:
     -
+        description: Rebuild bat cache if my custom theme isn't listed
+        command: bat --list-themes | grep --quiet base16-brighter || bat cache --build
+    -
         description: Link watchman configs
         command: fish ./watchman/install.fish
     -
