--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -809,7 +809,7 @@ dynamic_background_opacity yes
 #: background_opacity is set and transparent windows are supported or
 #: background_image is set.
 
-# dim_opacity 0.75
+dim_opacity 0.7
 
 #: How much to dim text that has the DIM/FAINT attribute set. One
 #: means no dimming and zero means fully dimmed (i.e. invisible).
