(tmux) statusbar redesign

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,11 +51,12 @@ bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 # status bar configuration
 #######################################
 set -g status-position bottom
-set -g pane-border-status bottom
-set -g @activecolor 'colour14'
+set -g pane-border-status off
+set -g @activecolor 'blue'
 set -g @inactivecolor 'black'
 set -g @bordercolor 'black'
 set -g @standoutcolor 'yellow'
+set -g @bgcolor 'colour8'
 # Panes
 set -g pane-border-lines heavy
 set -g pane-active-border-style "fg=#{@activecolor}"
@@ -63,20 +64,19 @@ set -g pane-border-style "fg=#{@bordercolor}"
 # Clock Mode
 setw -g clock-mode-colour 'cyan'
 # Messages
-set -g message-style "bg=terminal,fg=#{@activecolor}"
-set -g message-command-style "bg=#{@bordercolor},fg=#{@altcolor}"
+set -g message-style "bg=#{@bgcolor},fg=#{@activecolor}"
 # Bars
 set -g status-interval 1
 set -g status on
-set -g status-style "bg=terminal,fg=#{@bordercolor}"
+set -g status-style "bg=#{@bgcolor},fg=#{@bordercolor},bold"
 set -g status-right ""
 set -g status-left-length 40
-set -g status-left "#[align=left,fg=#{@bordercolor}]#[fg=#{@activecolor}]#{?client_prefix,#[bold#,fg=#{@standoutcolor}]-- PREFIX MODE --#[fg=#{@activecolor}],#S}#[fg=#{@bordercolor}] "
+set -g status-left "#[reverse]#{?client_prefix,#[bold#,fg=#{@standoutcolor}] -- PREFIX MODE -- ,#[fg=#{@activecolor}] #S }"
 # Windows
-set -g status-justify right
-set -g window-status-format "#[fg=#{@bordercolor}]#[fg=#{@activecolor},dim]#W#[fg=#{@bordercolor}]"
-set -g window-status-current-format "#[fg=#{@bordercolor}]#[#{?window_zoomed_flag,fg=#{@standoutcolor},fg=#{@activecolor}}]#W#F#[fg=#{@bordercolor}]"
-set -g window-status-separator "#[fg=black] / "
+set -g status-justify absolute-centre
+set -g window-status-format "#[fg=#{@activecolor},dim]#W"
+set -g window-status-current-format "#[#{?window_zoomed_flag,fg=#{@standoutcolor},fg=#{@activecolor}}]#W#F"
+set -g window-status-separator "#[fg=#{@bordercolor}] / "
 
 # TODO: These popup settings have been merged into tmux, just hasn't been added to a release yet.
 # When it gets put in a release I can remove the -q flag which is supressing the 'unknown setting' error.
