--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -73,7 +73,7 @@ set -g status-right ""
 set -g status-left-length 40
 set -g status-left "#[reverse]#{?client_prefix,#[bold#,fg=#{@standoutcolor}] -- PREFIX MODE -- ,#[fg=#{@activecolor}] #S }"
 # Windows
-set -g status-justify absolute-centre
+set -g status-justify right
 set -g window-status-format "#[fg=#{@activecolor},dim]#W"
 set -g window-status-current-format "#[#{?window_zoomed_flag,fg=#{@standoutcolor},fg=#{@activecolor}}]#W#F"
 set -g window-status-separator "#[fg=#{@bordercolor}] / "
