--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -71,7 +71,7 @@ set -g status on
 set -g status-style "bg=#{@bgcolor},fg=#{@bordercolor},bold"
 set -g status-right ""
 set -g status-left-length 40
-set -g status-left "#[reverse]#{?client_prefix,#[bold#,fg=#{@standoutcolor}] -- PREFIX MODE -- ,#[fg=#{@activecolor}] #S }"
+set -g status-left "#{tmux_mode_indicator}"
 # Windows
 set -g status-justify right
 set -g window-status-format "#[fg=#{@activecolor},dim]#W"
@@ -96,6 +96,15 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
     set -g @resurrect-processes '"~watch" mosh-client'
 # auto reload ~/.tmux.conf when it changes
 set-option -g @plugin 'b0o/tmux-autoreload'
+set -g @plugin 'MunifTanjim/tmux-mode-indicator'
+    set -g @mode_indicator_prefix_prompt ' -- PREFIX -- '
+    set -g @mode_indicator_prefix_mode_style 'bg=terminal,fg=#{@standoutcolor},reverse'
+    set -g @mode_indicator_copy_prompt ' -- COPY -- '
+    set -g @mode_indicator_copy_mode_style 'bg=terminal,fg=#{@standoutcolor},reverse'
+    set -g @mode_indicator_sync_prompt ' -- SYNC -- '
+    set -g @mode_indicator_sync_mode_style 'bg=terminal,fg=#{@standoutcolor},reverse'
+    set -g @mode_indicator_empty_prompt ' TMUX '
+    set -g @mode_indicator_empty_mode_style 'bg=terminal,fg=#{@activecolor},reverse'
 # Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
 # NOTE: continuum must be the last plugin listed: https://github.com/tmux-plugins/tmux-continuum#known-issues
 set -g @plugin 'tmux-plugins/tmux-continuum'
