--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -54,6 +54,7 @@
     ~/.lesskey: less/lesskey
     ~/.config/bat/themes/base16-brighter.tmTheme: bat/base16-brighter.tmTheme
     ~/.config/direnv/direnv.toml: direnv/direnv.toml
+    ~/.ignore: ignore
 
 # Using another link directive since I have multiple links to this directory and you can't have
 # multiple keys with the same name in YAML
