--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -52,8 +52,7 @@ bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 #######################################
 set -g status-position bottom
 set -g pane-border-status off
-set -g @activecolor 'blue'
-set -g @inactivecolor 'black'
+set -g @activecolor 'cyan'
 set -g @bordercolor 'black'
 set -g @standoutcolor 'yellow'
 set -g @bgcolor 'colour8'
@@ -103,7 +102,7 @@ set -g @plugin 'MunifTanjim/tmux-mode-indicator'
     set -g @mode_indicator_copy_mode_style 'bg=terminal,fg=#{@standoutcolor},reverse'
     set -g @mode_indicator_sync_prompt ' -- SYNC -- '
     set -g @mode_indicator_sync_mode_style 'bg=terminal,fg=#{@standoutcolor},reverse'
-    set -g @mode_indicator_empty_prompt ' TMUX '
+    set -g @mode_indicator_empty_prompt ' #S '
     set -g @mode_indicator_empty_mode_style 'bg=terminal,fg=#{@activecolor},reverse'
 # Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
 # NOTE: continuum must be the last plugin listed: https://github.com/tmux-plugins/tmux-continuum#known-issues
