--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -104,6 +104,13 @@ set -g @plugin 'MunifTanjim/tmux-mode-indicator'
     set -g @mode_indicator_sync_mode_style 'bg=terminal,fg=#{@standoutcolor},reverse'
     set -g @mode_indicator_empty_prompt ' #S '
     set -g @mode_indicator_empty_mode_style 'bg=terminal,fg=#{@activecolor},reverse'
+set -g @plugin 'MunifTanjim/tmux-suspend'
+    set -g @suspend_key 'M-z'
+    set -g @suspend_suspended_options " \
+        @mode_indicator_custom_prompt:: -- SUSPENDED -- , \
+        @mode_indicator_custom_mode_style::bg=terminal\\,fg=#{@standoutcolor}\\,reverse, \
+        pane-active-border-style::fg=#{@standoutcolor}, \
+    "
 # Uses tmux-resurrect to continuously save the current tmux session at a specified interval.
 # NOTE: continuum must be the last plugin listed: https://github.com/tmux-plugins/tmux-continuum#known-issues
 set -g @plugin 'tmux-plugins/tmux-continuum'
