--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -73,9 +73,9 @@ set -g status-left-length 40
 set -g status-left "#{tmux_mode_indicator}"
 # Windows
 set -g status-justify right
-set -g window-status-format "#[fg=#{@activecolor},dim]#W"
-set -g window-status-current-format "#[#{?window_zoomed_flag,fg=#{@standoutcolor},fg=#{@activecolor}}]#W#F"
-set -g window-status-separator "#[fg=#{@bordercolor}] / "
+set -g window-status-format "#[fg=#{@activecolor},dim,nobold]#W"
+set -g window-status-current-format "#[#{?window_zoomed_flag,fg=#{@standoutcolor},fg=#{@activecolor}},bold]#W#F"
+set -g window-status-separator "#[fg=#{@bordercolor},bold] / "
 
 # TODO: These popup settings have been merged into tmux, just hasn't been added to a release yet.
 # When it gets put in a release I can remove the -q flag which is supressing the 'unknown setting' error.
