(tmux) tweak statusline

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,7 +53,7 @@ bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 set -g status-position bottom
 set -g pane-border-status off
 set -g @activecolor 'cyan'
-set -g @bordercolor 'black'
+set -g @bordercolor 'colour8'
 set -g @standoutcolor 'yellow'
 set -g @bgcolor 'colour8'
 # Panes
@@ -63,7 +63,7 @@ set -g pane-border-style "fg=#{@bordercolor}"
 # Clock Mode
 setw -g clock-mode-colour 'cyan'
 # Messages
-set -g message-style "bg=#{@bgcolor},fg=#{@activecolor}"
+set -g message-style "bg=#{@bgcolor},fg=#{@activecolor},bold"
 # Bars
 set -g status-interval 1
 set -g status on
