--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,7 +22,7 @@ bind c new-window -c "#{pane_current_path}"
 bind '|' split-window -h -c '#{pane_current_path}'
 bind '-' split-window -v -c '#{pane_current_path}'
 # reload
-bind r run-shell 'tmux source ~/.tmux.conf && tmux display-message "Reloaded TMUX..."'
+bind r run-shell 'tmux source ~/.tmux.conf && tmux display-message "Reloaded TMUX"'
 # use alt/meta + arrow to navigate windows
 bind-key -n M-Left previous-window
 bind-key -n M-Right next-window
