--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -63,7 +63,7 @@ set -g pane-border-style "fg=#{@bordercolor}"
 # Clock Mode
 setw -g clock-mode-colour 'cyan'
 # Messages
-set -g message-style "bg=#{@bgcolor},fg=#{@activecolor},bold"
+set -g message-style "bg=#{@bgcolor},fg=#{@standoutcolor},bold"
 # Bars
 set -g status-interval 1
 set -g status on
