(tmux) add to list of processes that tmux-resurrect will restore

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -87,7 +87,7 @@ set -g @plugin 'nhdaly/tmux-better-mouse-mode'
     set -g @emulate-scroll-for-no-mouse-alternate-buffer "on"
 # allows saving the state of tmux to a file so it can be restored later
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-    set -g @resurrect-processes '"~watch" mosh-client vim ssh man less tail fzf "git ui" gitui ncdu'
+    set -g @resurrect-processes 'watch mosh-client vim ssh man less tail fzf "git ui" gitui ncdu "~tmux-nest" cloudflared'
 # auto reload ~/.tmux.conf when it changes
 set-option -g @plugin 'b0o/tmux-autoreload'
 set -g @plugin 'bigolu/tmux-mode-indicator'
