(tmux) style changes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,7 +20,7 @@ bind c new-window -c "#{pane_current_path}"
 bind '|' split-window -h -c '#{pane_current_path}'
 bind '-' split-window -v -c '#{pane_current_path}'
 # reload
-bind r run-shell 'tmux source ~/.tmux.conf && tmux display-message "Reloaded TMUX"'
+bind r run-shell 'tmux source ~/.tmux.conf && tmux display-message "#[bg=terminal,fg=#{@standoutcolor},reverse] Reloaded TMUX "'
 # use alt/meta + arrow to navigate windows
 bind-key -n M-Left previous-window
 bind-key -n M-Right next-window
@@ -61,11 +61,11 @@ set -g pane-border-style "fg=#{@bordercolor}"
 # Clock Mode
 setw -g clock-mode-colour 'cyan'
 # Messages
-set -g message-style "bg=#{@bgcolor},fg=#{@standoutcolor},bold"
+set -g message-style "bg=#{@bgcolor},fg=#{@standoutcolor}"
 # Bars
 set -g status-interval 1
 set -g status on
-set -g status-style "bg=#{@bgcolor},fg=#{@bordercolor},bold"
+set -g status-style "bg=#{@bgcolor},fg=#{@bordercolor},nobold"
 set -g status-right " "
 set -g status-left-length 40
 set -g status-left "#{tmux_mode_indicator}"
@@ -76,7 +76,7 @@ set -g window-status-current-format "#[#{?window_zoomed_flag,fg=#{@standoutcolor
 set -g window-status-separator "#[fg=black,bold] / "
 
 set -g popup-border-lines rounded
-set -g popup-border-style "fg=#{@bordercolor}"
+set -g popup-border-style "fg=black"
 
 # Plugins
 #######################################
