--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -55,6 +55,8 @@
     ~/.config/bat/themes/base16-brighter.tmTheme: bat/base16-brighter.tmTheme
     ~/.config/direnv/direnv.toml: direnv/direnv.toml
     ~/.ignore: ignore
+    ~/.default-cargo-crates: asdf/default-cargo-crates
+    ~/.config/pipr/pipr.toml: pipr/pipr.toml
 
 # Using another link directive since I have multiple links to this directory and you can't have
 # multiple keys with the same name in YAML
