(tmux) show messages for 1.5 seconds

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,6 +13,7 @@ set -s escape-time 0
 set -g base-index 1
 set -g prefix C-Space
 set -g pane-border-format ''
+set-option -g display-time 1500
 
 # Create a new window using the current pane's directory as the new window's directory
 bind c new-window -c "#{pane_current_path}"
