--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1176,9 +1176,7 @@ wayland_titlebar_color background
 #: The full list of actions that can be mapped to key presses is
 #: available here </actions>.
 
-kitty_mod super
-
-map kitty_mod+t no_op
+kitty_mod ctrl+shift
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
