(tmux) statusline tweaks

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -74,7 +74,7 @@ set -g status-left "#{tmux_mode_indicator}"
 set -g status-justify right
 set -g window-status-format "#[fg=#{@activecolor},dim,nobold]#W"
 set -g window-status-current-format "#[#{?window_zoomed_flag,fg=#{@standoutcolor},fg=#{@activecolor}},bold]#W#F"
-set -g window-status-separator "#[fg=black,bold] / "
+set -g window-status-separator "#[bg=terminal,fg=colour8,reverse,bold] / "
 
 set -g popup-border-lines rounded
 set -g popup-border-style "fg=black"
