--- a/pipr/pipr.toml
+++ b/pipr/pipr.toml
@@ -15,7 +15,7 @@ finish_hook = "xclip -selection clipboard -in"
 # Paranoid history mode writes every sucessfully running command into the history in autoeval mode.
 paranoid_history_mode_default = false
 
-autoeval_mode_default = true
+autoeval_mode_default = false
 
 history_size = 500
 cmdlist_always_show_preview = false
