--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -1,6 +1,5 @@
 # Solarized Light
 # taken from: https://github.com/dexpota/kitty-themes/blob/master/themes/Solarized_Light.conf
-
 background            #fdf6e3
 foreground            #52676f
 cursor                #52676f
@@ -11,16 +10,68 @@ url_color #d75f00
 color0 #b8b095
 color8 #faecc6
 color1 #d70000
-color9 #d75f00
+color9 #d70000
 color2 #5f8700
 color10 #5f8700
 color3 #af8700
-color11 #af8700
+color11 #d75f00
 color4 #0087ff
 color12 #0087ff
 color5 #af005f
 color13 #5f5faf
 color6 #00afaf
-color14 #00afaf
+color14 #52676f
 color7 #262626
 color15 #1c1c1c
+
+# # Light Owl Colorscheme
+# background            #FBFBFB
+# foreground            #403f53
+# # should match foreground
+# cursor                #403f53
+# # should match color8
+# selection_background  #e8e8e8
+# selection_foreground  none
+# url_color #9750BE
+# color0 #a5a5a5
+# color8 #e8e8e8
+# color1 #de3d3b
+# color9 #de3d3b
+# color2 #08916a
+# color10 #08916a
+# color3 #daaa01
+# color11 #fd8556
+# color4 #288ed7
+# color12 #288ed7
+# color5 #9750BE
+# color13 #9750BE
+# color6 #2AA298
+# color14 #403f53
+# color7 #403f53
+# color15 #403f53
+
+# Nord Light Colorscheme
+# background            #eceff4
+# foreground            #4c566a
+# # should match foreground
+# cursor                #4c566a
+# # should match color8
+# selection_background  #d8dee9
+# selection_foreground  none
+# url_color #9750BE
+# color0 #a5a5a5
+# color8 #d8dee9
+# color1 #bf616a
+# color9 #bf616a
+# color2 #6c894d
+# color10 #6c894d
+# color3 #daaa01
+# color11 #d08770
+# color4 #288ed7
+# color12 #288ed7
+# color5 #8e5783
+# color13 #8e5783
+# color6 #378172
+# color14 #4c566a
+# color7 #4c566a
+# color15 #4c566a
