--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,9 +51,9 @@ bind-key -n M-l if-shell "$is_vim" 'send-keys M-l'  'select-pane -R'
 #######################################
 set -g status-position bottom
 set -g pane-border-status off
-set -g @activecolor 'cyan'
+set -g @activecolor 'brightcyan'
 set -g @bordercolor 'colour8'
-set -g @standoutcolor 'yellow'
+set -g @standoutcolor 'brightyellow'
 set -g @bgcolor 'colour8'
 # Panes
 set -g pane-border-lines heavy
