(kitty) new light themes

--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -1,28 +1,28 @@
-# Solarized Light
-# taken from: https://github.com/dexpota/kitty-themes/blob/master/themes/Solarized_Light.conf
-background            #fdf6e3
-foreground            #52676f
-cursor                #52676f
-# should match color8
-selection_background  #faecc6
-selection_foreground  none
-url_color #d75f00
-color0 #b8b095
-color8 #faecc6
-color1 #d70000
-color9 #d70000
-color2 #5f8700
-color10 #5f8700
-color3 #af8700
-color11 #d75f00
-color4 #0087ff
-color12 #0087ff
-color5 #af005f
-color13 #5f5faf
-color6 #00afaf
-color14 #52676f
-color7 #262626
-color15 #1c1c1c
+# # Solarized Light
+# # taken from: https://github.com/dexpota/kitty-themes/blob/master/themes/Solarized_Light.conf
+# background            #fdf6e3
+# foreground            #52676f
+# cursor                #52676f
+# # should match color8
+# selection_background  #faecc6
+# selection_foreground  none
+# url_color #d75f00
+# color0 #b8b095
+# color8 #faecc6
+# color1 #d70000
+# color9 #d70000
+# color2 #5f8700
+# color10 #5f8700
+# color3 #af8700
+# color11 #d75f00
+# color4 #0087ff
+# color12 #0087ff
+# color5 #af005f
+# color13 #5f5faf
+# color6 #00afaf
+# color14 #52676f
+# color7 #262626
+# color15 #1c1c1c
 
 # # Light Owl Colorscheme
 # background            #FBFBFB
@@ -75,3 +75,31 @@ color15 #1c1c1c
 # color14 #4c566a
 # color7 #4c566a
 # color15 #4c566a
+
+# Seoul256 Light Colorscheme
+background            #eaeaea
+foreground            #4e4e4e
+# should match foreground
+cursor                #4e4e4e
+# should match color8
+selection_background  #C6C6C6
+selection_foreground  none
+url_color #875f87
+color0 #8a8a8a
+color1 #af5f5f
+color2 #5f885f
+color3 #af8760
+# This blue is darker
+# color4 #2b6fc2
+color4 #5f87ae
+color5 #875f87
+color6 #5f8787
+color7 #4e4e4e
+color8 #C6C6C6
+color9 #870100
+color10 #005f00
+color11 #d8865f
+color12 #0087af
+color13 #87025f
+color14 #0087af
+color15 #4e4e4e
