--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,6 +14,8 @@ set -g base-index 1
 set -g prefix C-Space
 set -g pane-border-format ''
 set-option -g display-time 1500
+set-option -g set-titles on
+set-option -g set-titles-string '#T'
 
 # Create a new window using the current pane's directory as the new window's directory
 bind c new-window -c "#{pane_current_path}"
