--- a/install/install.conf.yaml
+++ b/install/install.conf.yaml
@@ -61,6 +61,7 @@
     ~/.config/pipr/pipr.toml: pipr/pipr.toml
     ~/.config/brewfile/Brewfile: brew/Brewfile
     ~/.config/pipx/pipx-packages.json: pipx/pipx-packages.json
+    ~/.local/bin/reload-kitty: kitty/reload-kitty
 
 # Using another link directive since I have multiple links to this directory and you can't have
 # multiple keys with the same name in YAML
