(kitty) tweak light theme

--- a/kitty/day-theme.conf
+++ b/kitty/day-theme.conf
@@ -4,11 +4,11 @@ background            #fdf6e3
 foreground            #52676f
 cursor                #52676f
 # should match color8
-selection_background  #faecc6
+selection_background  #f6de9c
 selection_foreground  none
 url_color #d75f00
 color0 #b8b095
-color8 #faecc6
+color8 #f6de9c
 color1 #d70000
 color9 #d70000
 color2 #5f8700
@@ -23,6 +23,8 @@ color6 #00afaf
 color14 #52676f
 color7 #262626
 color15 #1c1c1c
+color17 #FFD7D7
+color18 #D7FFD7
 
 # # Light Owl Colorscheme
 # background            #FBFBFB
